# housejeffries

./: .gitignore  Main.hs  README.md  Site.hs  get_content  housejeffries.cabal  link  site.hs  stack.yaml
css/: minimal.css
resources/: .htaccess  pgp.txt
src/: Feed.hs  Lib.hs  Types.hs
src/css/: minimal.css  syntax-highlighting.css
src/resources/: .htaccess  pgp.txt
src/templates/: page-core.html
templates/: base.html  page-after-rss-serialization.html  page.html
