name:               housejeffries
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          Site.hs
  build-depends:    base     == 4.*
                  , hakyll   == 4.7.2.0
                  , filepath == 1.4.*
  ghc-options:      -threaded
  default-language: Haskell2010
