name:                 housejeffries
version:              0.1.0.0
build-type:           Simple
cabal-version:        >= 1.10

library
  hs-source-dirs:     src
  exposed-modules:      Feed
                      , Lib
                      , Types
  default-language:   Haskell2010
  ghc-options:        -Wall
  default-extensions: OverloadedStrings
  build-depends:
      aeson
    , base
    , bytestring
    , data-default
    , feed
    , filepath
    , hakyll
    , pandoc
    , text
    , time
    , timerep
    , unordered-containers
    , xml

executable main
  main-is:            Main.hs
  ghc-options:        -Wall
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  build-depends:
      base
    , housejeffries
    , shake
    , text
    , time
